--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-language-server": "0.0.56",
     "vue-template-compiler": "^2.6.10"
   }
 }
